<resources>
    <string name="app_name">Track</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_researcher_setup">Researcher Setup</string>
    <string name="title_activity_user_account_setup">User Account Setup</string>
    <string name="title_activity_setup_complete">Setup Complete</string>
    <string name="title_activity_demo_intro">Demo</string>
    <string name="title_activity_demo_free_text">Free-Text Demo</string>
    <string name="title_activity_demo_multi_choice__single">
        Multiple Choice, Single Answer Demo</string>
    <string name="title_activity_demo_multi_choice__multi">
        Multiple Choice, Multiple Answer Demo</string>
    <string name="title_activity_demo_scale">Scale Demo</string>
    <string name="title_activity_demo_scale_vertical">Vertical Scale Demo</string>
    <string name="title_activity_research_participation">Research Participation</string>
    <string name="participantQuestion">Are you a participant in %1$s %2$s\'s study?</string>
    <string name="participantYes">Yes, I am participating in the study and am currently at the initial briefing session.*</string>
    <string name="participantNo">No, I would like to use this app to personally track my emotions and daily activities.</string>
    <string name="participantYesMsg">* If you are participating in the study but not currently at
        the briefing session,
        kindly exit the application so that %1$s can assist during setup.</string>
    <string name="title_activity_user_login">Login</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="error_user_login_enter_password_">Enter password.</string>
    <string name="error_user_login_invalidPassword">Invalid password.</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="resetPasswordMsg">Use the fields below to setup a new password.</string>
    <string name="resetPasswordWarning">You will no longer be able to access any data from
        surveys completed before password reset.</string>
    <string name="resetPasswordWarningInfo">Any data shown in the feedback graphs will
        correspond to surveys completed after password reset.</string>
    <string name="resetPasswordDialogTitle">Reset Password?</string>
    <string name="resetPasswordDialogMessage">@string/resetPasswordWarning</string>
    <string name="resetPasswordDialogPositiveBtn">RESET</string>
    <string name="resetPasswordDialogNegativeBtn">CANCEL</string>
    <string name="passwordHasBeenResetMsg">Password has been reset.</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="passwordHasBeenChangedMsg">Password has been changed.</string>
    <string name="title_activity_study_configuration">Study Configuration</string>
    <string name="title_activity_study_configuration_nonParticipant">Configuration</string>
    <string name="startDate">Start Date</string>
    <string name="duration">Duration</string>
    <string name="samplesPerDay">Samples per Day</string>
    <string name="dailyStartTime">Daily Start Time</string>
    <string name="dailyEndTime">Daily End Time</string>
    <string name="days">days</string>
    <string name="surveys">completed surveys</string>
    <string name="feedbackActivation">Feedback Availability</string>
    <string name="defaultTimeFormat">hh:mm</string>
    <string name="defaultDateFormat">EEEE, dd MMM yyyy</string>
    <string name="dateFormatFullMonthNoYear">EEEE, dd MMMM</string>
    <string name="samples">samples</string>
    <string name="notificationScheduling">Notification Scheduling</string>
    <string name="notificationSchedulingRandom">Random</string>
    <string name="notificationSchedulingFixed">Fixed</string>
    <string-array name="notificationSchedulingOptions">
        <item>@string/notificationSchedulingRandom</item>
        <item>@string/notificationSchedulingFixed</item>
    </string-array>
    <string name="participantPasswordExplanation">
        You will need this password to access feedback on your survey responses.</string>
    <string name="demoSuggestion">Would you like a short demo?</string>
    <string name="setupCompleteTitleMessage">All Done!</string>
    <string name="setupCompleteMessage">You\'re set up and ready to go.</string>
    <string name="demoNo">No, I got this.</string>
    <string name="demoYes">Yes please!</string>
    <string name="StartDemo">Start Demo</string>
    <string name="demoIntro">This demo will guide you through a short tour of different question
        types you may encounter when using the app.\n\nNone of the answers you provide during the
        demo will be saved, this is merely for you to practise.</string>
    <string name="demoFreeTextQuestion">What is your favourite colour?</string>
    <string name="demoFreeTextExplanation">This is a free-text question.
        Click on the textbox to bring up the keyboard and write a short answer.</string>
    <string name="demoMultiChoiceSingleQuestion">What day is it today?</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="demoMultiChoiceSingleExplanation">This is a multiple choice,
        <b>single</b> answer question.
        Select one option and proceed using the <i>next</i> button below.</string>
    <string name="demoMultiChoiceMultiQuestion">What type of music do you like?</string>
    <string name="musicOption1">Classic</string>
    <string name="musicOption2">Country</string>
    <string name="musicOption3">Electronic</string>
    <string name="musicOption4">Hip Hop</string>
    <string name="musicOption5">Indie</string>
    <string name="musicOption6">Jazz</string>
    <string name="musicOption7">Pop</string>
    <string name="musicOption8">Rock</string>
    <string name="musicOption9">RnB</string>
    <string name="demoMultiChoiceMultiExplanation">This is a multiple choice,
        <b>multiple</b> answer question. Tick all the options that apply.</string>
    <string name="demoScaleQuestion">How hungry are you at the moment?</string>
    <string name="demoScaleLowest">not at all</string>
    <string name="demoScaleHighest">starving</string>
    <string name="demoScaleExplanation">This is a scale-type question.
        Drag the slider to answer.</string>
    <string name="demoScaleVerticalQuestion">Do you have breakfast in the morning?</string>
    <string name="demoScaleVerticalExplanation">
        This question makes use of a Likert-type scale. Select one option to answer.</string>
    <string name="finish">Finish</string>
    <string name="briefCompleteTitle">That\'s all for now.</string>
    <string name="briefCompleteSubTitle">Thank you for your participation.</string>
    <string name="briefCompleteSubTitle_nonParticipant">You are ready to start your tracking experience.</string>
    <string name="briefCompleteExplanation"><![CDATA[The study will start on %1$s,
        and run for %2$d days, until %3$s.
        <br/><br/>You will receive a <b>notification</b> when a survey is available.
        <br/><br/>The notification will expire after <b>%4$d minutes</b>
        so please try and answer as soon as possible.
        We promise it will only take a few minutes. :)]]></string>
    <string name="briefCompleteExplanation_nonParticipant"><![CDATA[Sampling will start on %1$s,
        and run for %2$d days, until %3$s.
        <br/><br/>You will receive a <b>notification</b> when a survey is available.
        <br/><br/>The notification will expire after <b>%4$d minutes</b>
        so please try and answer as soon as possible.
        We promise it will only take a few minutes. :)]]></string>
    <string name="error_missingResearcherUsername">Enter researcher username.</string>
    <string name="error_missingResearcherPassword">Enter researcher password.</string>
    <string name="error_verifyingCredentials">
        Error occurred while verifying credentials online.</string>
    <string name="error_confirmPassword">Password does not match.</string>
    <string name="error_invalidPasswordLength">
        Password must be between 8 and 20 characters in length.</string>
    <string name="error_invalidPassword">
        Password must contain at least one digit and one letter,
        and cannot contain whitespace.</string>
    <string name="error_startDate">Study cannot start before tomorrow.</string>
    <string name="error_missingDuration">Enter the number of days.</string>
    <string name="error_missingSamplesPerDay">
        Enter the number of surveys to be filled out per day.</string>
    <string name="error_maxSamplesPerDay">Number of samples per day cannot exceed %1$d.</string>
    <string name="error_dailyEndTime">Make sure there are at least %1$d hours between Start and
        End Time since there will be %1$d samples per day.</string>
    <string name="error_invalidResearcherCredentials">Invalid username and/or password.</string>
    <string name="error_noInternetConnection">Data network unavailable</string>
    <string name="researcherUsername">Researcher Username</string>
    <string name="researcherPassword">Researcher Password</string>
    <string name="appLockedTitle">App Locked for %1$d hours.</string>
    <string name="appLockedSubTitle">Too many failed login attempts.</string>
    <string name="appLockedMsg">Please try again later.</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="notificationWindow">Notification Window</string>
    <string name="minutes">minutes</string>
    <string name="error_missingNotificationWindow">Enter number of minutes survey will be available
        for after initial notification.</string>
    <string name="error_missingFeedbackActivation">Enter the minimum number of surveys to be
        completed for in-app feedback to become available.</string>
    <string name="error_enterParticipantId">Enter participant identification number.</string>
    <string name="error_enterValidNumber">Enter a valid number.</string>
    <string name="error_enterPositiveNumber">Enter a number greater than zero.</string>
    <string name="error_answerToProceed">Answer the question to proceed.</string>
    <string name="error_answerTooLong">Answer cannot exceed %1$d characters.</string>
    <string name="error_enterOtherOptionText">Fill in the \'%1$s\' text box to proceed.</string>
    <string name="error_invalidCharacterInOther">\'%1$s\' text cannot contain \'%2$s\'.</string>
    <string name="smiley">:)</string>
    <string name="likertValue1">1</string>
    <string name="likertValue2">2</string>
    <string name="likertValue3">3</string>
    <string name="likertValue4">4</string>
    <string name="likertValue5">5</string>
    <string name="likertValue6">6</string>
    <string name="likertValue7">7</string>
    <string name="likertFreq5Point_1">Never</string>
    <string name="likertFreq5Point_2">Rarely</string>
    <string name="likertFreq5Point_3">Sometimes</string>
    <string name="likertFreq5Point_4">Often</string>
    <string name="likertFreq5Point_5">Always</string>
    <string name="title_activity_briefing_complete">BriefingComplete</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="noSurveyAvailableTitle">No Survey Currently Available</string>
    <string name="noSurveyAvailableSubTitle">Keep an eye out for those notifications.</string>
    <string name="defaultTitle">Title</string>
    <string name="defaultSubTitle">Sub-Title</string>
</resources>