<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="informatics.uk.ac.ed.esm.DemoMultiChoice_Single">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BodyLayout"
        android:id="@+id/bodyLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/btnNext">

        </ScrollView>

        <Button
            android:layout_width="@dimen/navigation_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext"
            android:layout_gravity="right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:theme="@style/RaisedButtonColoured_Next" />

        <Button
            android:layout_width="@dimen/navigation_button_width"
            android:layout_height="wrap_content"
            android:id="@+id/btnPrevious"
            android:layout_gravity="right"
            android:gravity="center"
            android:theme="@style/RaisedButtonColoured_Previous"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/btnNext">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/demoMultiChoiceSingleQuestion"
                android:id="@+id/textView8"
                style="@style/QuestionText" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"
                    android:id="@+id/radioButton"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tue"
                    android:id="@+id/radioButton2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wed"
                    android:id="@+id/radioButton3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thu"
                    android:id="@+id/radioButton4" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fri"
                    android:id="@+id/radioButton5" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sat"
                    android:id="@+id/radioButton6" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sun"
                    android:id="@+id/radioButton7" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/demoMultiChoiceSingleExplanation"
                android:id="@+id/txtViewExp"
                style="@style/ExplanationText"
                android:autoText="false" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>