<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="informatics.uk.ac.ed.esm.SetupComplete">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="@dimen/title_height"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_setup_complete"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/text_icons" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/BodyLayout"
        android:id="@+id/bodyLayout"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/setupCompleteTitleMessage"
            android:id="@+id/textView4"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demoNo"
            android:id="@+id/btnDemoNo"
            android:theme="@style/RaisedButtonTransparent"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btnDemoYes"
            android:layout_toStartOf="@+id/btnDemoYes" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demoYes"
            android:id="@+id/btnDemoYes"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/RaisedButtonColoured"
            android:layout_gravity="right|bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/demoSuggestion"
            android:id="@+id/textView5"
            android:layout_marginBottom="50dp"
            android:layout_above="@+id/btnDemoNo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/setupCompleteMessage"
                android:id="@+id/textView6" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_ic_mood_grey_24dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
